--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: helvetica, sans-serif;
+    background-color: gray;
 }
 
 a {
@@ -24,14 +25,17 @@ h2 {
     float: left;
     width: 60%;
     padding: 0 0 0 30px;
+    background-color: DarkSlateGray;
+    color: white;
 }
 
 #sidebar {
     float: right;
     width: 30%;
     padding: 10px;
-    background: #efefef;
+    background: DarkSlateGray;
     height: 100%;
+    color: white;
 }
 
 p.date {
