--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -8,12 +8,32 @@
 </head>
 <body>
 <div id="content">
+    {% if messages %}
+    {% for message in messages %}
+        {{ message.tags }} {{ message }}
+    {% endfor %}
+    {% endif %}
+
     {% block content %}
     {% endblock %}
 </div>
 <div id="sidebar">
     <a href="{% url 'blog:post_list' %}"><h2>My blog</h2></a>
     <p>I've written {% total_posts %} posts so far.</p>
+     <hr>
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'accounts:users-profile' %}">My profile</a></p>
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <a href="#" onclick="parentNode.submit();">Log Out</a>
+        </form>
+    {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">Log In</a> or <a href="{% url 'accounts:signup' %}">SignUp</a>
+        <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+    {% endif %}
+    <hr>
     <h3>Latest posts:</h3>
     {% show_latest_posts 3 %}
     <h3>Most commented posts</h3>
