--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,9 +6,9 @@
   <h1>Forgot your password?</h1>
   <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
-  <form method="POST">
+  <form method="POST" class="form-control mb-1">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    <input type="submit" value="Send me instructions!" class="btn btn-primary mb-3 btn-lg">
   </form>
 {% endblock %}
