--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">My First Blog Django 5</a>
+        <a class="navbar-brand" href="/">My Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
@@ -97,8 +97,7 @@
 </div>
 
 <footer class="py-5 bg-dark mt-2 mt-auto">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2024, Powered by
-        Django</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Developed by Lawliet</p></div>
 </footer>
 </body>
 </html>
