--- a/templates/blog/post/latest_posts.html
+++ b/templates/blog/post/latest_posts.html
@@ -1,3 +1,3 @@
 {% for post in latest_posts %}
-        <a class="list-group-item list-group-item-action" href="{{ post.get_absolute_url }}">{{ post.title }} {{ post.publish }}</a>
+        <a class="list-group-item list-group-item-action" href="{{ post.get_absolute_url }}">{{ post.title }} {{ post.publish.year }}-{{ post.publish.month }}-{{ post.publish.day }} {{ post.publish.hour }}:{{ post.publish.minute }}</a>
 {% endfor %}
